2003-06-10  Vicki Murley  <vicki@apple.com>

        Reviewed by john. 

        * WebKit.order: new order file for 1.0

2003-06-09  Chris Blumenberg  <cblu@apple.com>

        * WebView.subproj/WebDataSource.h: Removed FIXME related to pageTitle.

2003-06-09  Chris Blumenberg  <cblu@apple.com>

	<rdar://problem/3283359>: don't load Cocoa Java plug-in if in Carbon app


        Reviewed by darin.

        * Plugins.subproj/WebPluginDatabase.h: removed pluginForFilename, wasn't being used
        * Plugins.subproj/WebPluginDatabase.m:
        (-[WebPluginDatabase pluginForKey:withEnumeratorSelector:]): don't use the plug-in if ![self isCocoa] && [[[webPlugin bundle] bundleIdentifier] isEqualToString:JavaCocoaPluginIdentifier]

2003-06-09  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3284848>: REGRESSION: repro crash in Flash handling null event, going back to Japanese Disney page

	When restarting plug-ins from the BF cache, we were not calling NPP_SetWindow.

        Reviewed by darin.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView stop]): set the window type to 0 to force the calling of NPP_SetWindow 

=== Safari-83 ===

2003-06-07  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.

2003-06-07  Darin Adler  <darin@apple.com>

        Rolled out Chris's fix for 3156169 because it was causing a lot of crashes
        and problems with basic behavior. We can try again later.
        
        One of the problems was that Back wasn't working. Another was that you could
        not follow the link at the top of the page at kbb.com. More testing seemed to
        reveal still more problems.
        
        * WebView.subproj/WebFramePrivate.h: Rolled back to previous version.
        * WebView.subproj/WebFramePrivate.m: Ditto.

2003-06-06  Richard Williamson  <rjw@apple.com>
